--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
+#relative_permalinks: true # see http://jekyllrb.com/docs/upgrading/2-to-3/
 
 # Setup
 title:               (defblog exordium)
@@ -27,3 +27,6 @@ author:
 version:             2.0.0
 github:
   repo:              https://github.com/philippe-grenet/philippe-grenet.github.io.git
+
+# Gems
+gems:                [jekyll-paginate]
